Fixed card back visibility

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ a:focus {
   width: 100%;
   height: 100%;
   padding: 3em;
+  z-index: 1;
 }
 
 .back {
